--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ if (!project.hasProperty("teamB")) {
     ext.teamB = "examplefuncsplayer"
 }
 if (!project.hasProperty("maps")) {
-    ext.maps = "shrine"
+    ext.maps = "SparseForest"
 }
 
 // Here we define a task. Tasks like this one, 'unpackClient', can be
@@ -139,11 +139,11 @@ task run(type: JavaExec, dependsOn: 'build') {
         '-Dbc.server.map-path=maps',
         '-Dbc.server.debug=true',
         '-Dbc.engine.debug-methods=true',
-        '-Dbc.game.team-a='+project.property('teamA'),
-        '-Dbc.game.team-b='+project.property('teamB'),
+        '-Dbc.game.team-a=cheese',
+        '-Dbc.game.team-b=jinchao',
         '-Dbc.game.team-a.url='+sourceSets.main.output.classesDir,
         '-Dbc.game.team-b.url='+sourceSets.main.output.classesDir,
-        '-Dbc.game.maps='+project.property('maps'),
+        '-Dbc.game.maps=SparseForest',
         '-Dbc.server.save-file=' + 'matches/' + project.property('teamA') + '-vs-' + project.property('teamB') + '-on-' + project.property('maps') + '.bc17'
     ]
 }
