Why does gitignore not work

--- a/build.gradle
+++ b/build.gradle
@@ -139,8 +139,8 @@ task run(type: JavaExec, dependsOn: 'build') {
         '-Dbc.server.map-path=maps',
         '-Dbc.server.debug=true',
         '-Dbc.engine.debug-methods=true',
-        '-Dbc.game.team-a='+project.property('teamA'),
-        '-Dbc.game.team-b='+project.property('teamA'),
+        '-Dbc.game.team-a='+project.getProperty('teamA'),
+        '-Dbc.game.team-b='+project.getProperty('teamB'),
         '-Dbc.game.team-a.url='+sourceSets.main.output.classesDir,
         '-Dbc.game.team-b.url='+sourceSets.main.output.classesDir,
         '-Dbc.game.maps=SparseForest',
